# tau2-purple-agent

./: .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  messenger.py  server.py
